# TrioMotion_UnifiedApi

./: .gitignore  BuildMe-VS2017.bat  BuildMe.bat  BuildMe.sh  CMakeLists.txt  RebuildMe.bat  RebuildMe.sh  TrioMotion_UnifiedApi.sln  TrioMotion_UnifiedApi.vpj  TrioMotion_UnifiedApi.vpw  TrioMotion_UnifiedApi.vpwwildcardcache
Binding/: README.md
Binding/C/: README.md
Binding/C++/: README.md
Binding/LabView/: README.md
Binding/Python/: Python.md
CMake/: ToolchainLinux-x64.txt  ToolchainLinux-x86.txt  ToolchainWindows-x86.txt
Platform/: README.md  TrioMotion_UnifiedApi.h
Platform/Port/: README.md
Platform/Port/RS232/: README.md
Platform/Port/TCP/: CMakeLists.txt  README.md  TCP.vcxproj  TrioMotion_UnifiedApi-TCP.cpp  TrioMotion_UnifiedApi-TCP.h
Platform/Port/UDP/: README.md
Platform/SharedMemory/: README.md
Platform/SharedMemory/Flex7/: README.md
Platform/SharedMemory/PC-MCAT/: README.md
